<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="#FFFFFF"
        android:layout_width="404dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chatroom"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/txtText"
            android:textColor="#08A9F1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/name"
            android:gravity="center"
            android:hint="@string/hintNhapten"
            android:inputType="textAutoComplete"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp"
            android:textColor="#111111"
            android:textColorHint="#CCCCCC" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/login"
            android:text="@string/btn_Login"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/tv_Vietnamese"
            android:textColor="#003399" />

        <TextView
            android:id="@+id/txtTA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/tv_English"
            android:textColor="#003399" />

        <TextView
            android:id="@+id/txtTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/tv_French"
            android:textColor="#003399" />
    </LinearLayout>
</LinearLayout>