<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtTuychon"
            android:textColor="#08A9F1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_RoomChat2D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/login"
            android:text="@string/btnChoiGame"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_Game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/login"
            android:text="@string/btnGameCaro"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearLayout_Interface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">
                <Button
                    android:id="@+id/btn_Black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_black"
                    android:text="@string/btnBlack"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/btn_White"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_white"
                    android:text="@string/btnWhite"
                    android:textAllCaps="false"
                    android:textColor="#222"
                    android:textSize="16sp" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_InterfaceChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/login"
                android:text="@string/btnInterfaceChange"
                android:textAllCaps="false"
                android:visibility="visible"
                android:textColor="#FFF"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/login"
            android:text="@string/btnDangxuat"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>