<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:weightSum="9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/online_list_background1"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/txtCTC"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listView_Chat"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:transcriptMode="alwaysScroll" />

            </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/online_list_background1"
                android:layout_weight="2">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/txtOnline"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listView_Online"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:transcriptMode="alwaysScroll" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/online_list_background1"
            android:orientation="horizontal"
            android:weightSum="5">

            <EditText
                android:id="@+id/editText_Message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:background="@drawable/online_list_background1"
                android:gravity="bottom"
                android:inputType="textAutoComplete"
                android:paddingLeft="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_Send"
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@android:color/transparent"
                android:text="@string/btnGui"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top">
        <ImageButton
            android:id="@+id/btn_More"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/icon_more"
            android:backgroundTint="#FFF"/>
    </FrameLayout>

</FrameLayout>